2008-11-01  Richard Guenther  <rguenther@suse.de>

PR middle-end/37976
	* builtins.c (fold_builtin_strspn): Return a size_t.
	(fold_builtin_strcspn): Likewise.

	* gcc.c-torture/compile/pr37976.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141514 138bc75d-0d04-0410-961f-82ee72b054a4